fixed spacing

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,10 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
     height: 100vh;
     margin: 0;
@@ -22,10 +25,6 @@ img {
 }
 
 #wrapper {
-    margin-top: 100px; 
-    padding: 0; 
-    box-sizing:border-box; 
-    position: relative; 
     z-index: 100;
     background: transparent; 
 }
@@ -48,7 +47,7 @@ img {
     position: fixed; 
     background:#FAF9F6; 
     background: linear-gradient(45deg, #FAF9F6, #ffffff 75%);
-    overflow: hidden;
+    /* overflow: hidden; */
     background-size: cover; 
     background-position: 50% 50%;
     background-repeat: no-repeat; 
@@ -59,9 +58,7 @@ img {
     left: 0 */
 }
 
-#about {
-    margin-top: 100px;
-}
+
 .resize {
     margin-top: 15%;
     width: 300px; 
@@ -132,30 +129,45 @@ img {
     background-color: antiquewhite;
 }
 
-.curved-div {
-    margin-top: 100px;
-    background-color: #ff3c00 !important;
-    color: #eb4d4b;
-    text-align: center;
-    z-index: 2000;
+.about {
+    margin-top: 20%; 
+    line-height: 0;
+    display: flex; 
+    flex-direction: column;
     width: 100%; 
-    position: relative;
-    display: block; 
-}
-.curved-div h1 {
-    font-size: 6rem;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-.curved-div p {
-    font-size: 1rem;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    padding: 0; 
 }
 
-.curved-div svg {
-    background-color: #ff3c00;
-    display: block; 
+.curved-div {
     width: 100%; 
-}
+    height: 100%; 
+    background: #eb4d4b;
+    opacity: 0.8;
+    color: #fff;
+    text-align: center;
+    z-index: 200;
+    position: relative;
+    margin: 0; 
+    padding: 0; 
+    display: block; 
+  }
+  .curved-div h1 {
+    display: block; 
+    font-size: 6rem;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  }
+  .curved-div p {
+    display: block; 
+    line-height: 1rem;
+    font-size: 1rem;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  }
+
+  .curved-div svg {
+    width: 100%; 
+    height: 100%; 
+    display: block; 
+  }
 
 /* #curved-div {
     width: 100%;
@@ -165,9 +177,10 @@ img {
     text-align: center;
     position: relative;
     z-index: 200;
-}
+    display: block; 
+} */
 
-#curved-div h1 {
+/* #curved-div h1 {
     font-size: 6rem;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background: #eb4d4b;
@@ -177,9 +190,9 @@ img {
     font-size: 1rem;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background: #eb4d4b;
-}
+} */
 
-#curved-div svg {
+/* #curved-div svg {
     display: block;
     width: 100%;
     background: #eb4d4b;
